# fraud-agentic-ai

./: .env.example  .gitignore  AGENTS.md  README.md  benchmark_llamacpp_grid.py  plot_llamacpp_results.py  pyproject.toml  requirements.txt
data/: README.md  bb_dataset_mapping.yaml
data/sample/: accounts.csv  alerts.csv  behavioural_events.csv  customers.csv  data_quality.csv  features.csv  historical_cases.csv  lineage.csv  transactions.csv
design/: Air-lab_Fraud_Agentic_AI_Codex_Handoff_v1_1_Dashboard.md  Air-lab_Fraud_Agentic_AI_Project_Design.md  architecture.md  demo_script.md  enterprise_mapping.md  issues-pending-review.md  two_min_demo.md
docs/: Air-lab_Fraud_Agentic_AI_Codex_Handoff_v1_1_Dashboard.md  Air-lab_Fraud_Agentic_AI_Project_Design.md  architecture_overview.md  case_evidence_record_schema.md  codex_handoff.md  demo_script.md  governance_model.md  langgraph_workflow.md  signal_layer_design.md
knowledge/data_dictionary/: behavioural_features.md  model_features.md  transaction_features.md
signal_registry/: approved_signals.yaml  candidate_signals.yaml  rejected_signals.yaml
streamlit_app/: README.md  fraud_case_dashboard.py
tests/: conftest.py  test_bb_dataset_tools.py  test_cli.py  test_dashboard_service.py  test_data_contracts.py  test_evidence_summary.py  test_governance_checks.py  test_graph_workflow.py  test_human_review.py  test_llm_factory.py  test_local_llm_wiring.py  test_project_structure.py  test_rag_retriever.py  test_signal_evaluation.py  test_signal_monitoring.py
user_tests/: Phase1_UserCases.md  phase10_user_test_cases.md
(+47 files in other folders)
