[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "airlab-fraud-agentic-ai"
version = "0.1.0"
description = "Enterprise AI architecture lab for agentic fraud investigation"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Emily Gao" }]
dependencies = [
    "matplotlib>=3.9.0",
    "pandas>=2.2.0",
    "pydantic>=2.6.0",
    "pyyaml>=6.0.0",
    "streamlit>=1.32.0",
    "rich>=14.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
airlab-fraud = "airlab_fraud_agentic_ai.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
